Basic product card added, get padding/marging values from figma so it is closets to the design.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BestSellers</title>
+    <title>Best Sellers</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -13,7 +13,32 @@
           <h1>Best Sellers</h1>
           <a href="#">Shop All Best Sellers &rarr;</a>
         </div>
-        <div class="section-body">section body</div>
+        <div class="section-body">
+          <article class="product-card right-gap">
+            <div class="badge primary">BEST SELLER</div>
+            <img
+              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="City at night"
+            />
+            <h2>Outside Vibes T-Shirt Sunshine</h2>
+            <p class="reviews">
+              <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
+            </p>
+            <p class="price">$104.95</p>
+          </article>
+          <article class="product-card">
+            <div class="badge primary">BEST SELLER</div>
+            <img
+              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="City at night"
+            />
+            <h2>Outside Vibes T-Shirt Sunshine</h2>
+            <p class="reviews">
+              <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
+            </p>
+            <p class="price">$104.95</p>
+          </article>
+        </div>
       </section>
     </div>
     <script src="script.js" defer></script>
