Did some tweaks for typography, tested with 2 extra products.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
             </p>
             <p class="price">$104.95</p>
           </article>
+          <article class="product-card right-gap">
+            <div class="badge primary">BEST SELLER</div>
+            <img
+              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="City at night"
+            />
+            <h2>Outside Vibes T-Shirt Sunshine</h2>
+            <p class="reviews">
+              <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
+            </p>
+            <p class="price">$104.95</p>
+          </article>
+          <article class="product-card">
+            <div class="badge primary">BEST SELLER</div>
+            <div class="badge secondary">save 15%</div>
+            <img
+              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="City at night"
+            />
+            <h2>Outside Vibes T-Shirt Sunshine</h2>
+            <p class="reviews">
+              <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
+            </p>
+            <p class="price">$104.95</p>
+          </article>
         </div>
       </section>
     </div>
