--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
           <article class="product-card">
             <div class="badge primary">BEST SELLER</div>
             <div class="badge secondary">save 15%</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
