Como back to this section, add cta on mobile, hide some elements as well.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
             </p>
             <p class="price">$104.95</p>
           </article>
-          <article class="product-card right-gap">
+          <div class="cta-container">
+            <button class="show-more-cta">Show More</button>
+          </div>
+          <article class="product-card right-gap hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
             <img
               src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -84,32 +87,7 @@
             </p>
             <p class="price">$104.95</p>
           </article>
-          <article class="product-card">
-            <div class="badge primary">BEST SELLER</div>
-            <div class="badge secondary">save 15%</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
-            <h2>Outside Vibes T-Shirt Sunshine</h2>
-            <p class="reviews">
-              <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
-            </p>
-            <p class="price">$104.95</p>
-          </article>
-          <article class="product-card right-gap">
-            <div class="badge primary">BEST SELLER</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
-            <h2>Outside Vibes T-Shirt Sunshine</h2>
-            <p class="reviews">
-              <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
-            </p>
-            <p class="price">$104.95</p>
-          </article>
-          <article class="product-card">
+          <article class="product-card hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
             <div class="badge secondary">save 15%</div>
             <img
@@ -122,7 +100,7 @@
             </p>
             <p class="price">$104.95</p>
           </article>
-          <article class="product-card right-gap">
+          <article class="product-card right-gap hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
             <img
               src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -134,7 +112,32 @@
             </p>
             <p class="price">$104.95</p>
           </article>
-          <article class="product-card">
+          <article class="product-card hidden-on-mobile">
+            <div class="badge primary">BEST SELLER</div>
+            <div class="badge secondary">save 15%</div>
+            <img
+              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="City at night"
+            />
+            <h2>Outside Vibes T-Shirt Sunshine</h2>
+            <p class="reviews">
+              <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
+            </p>
+            <p class="price">$104.95</p>
+          </article>
+          <article class="product-card right-gap hidden-on-mobile">
+            <div class="badge primary">BEST SELLER</div>
+            <img
+              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="City at night"
+            />
+            <h2>Outside Vibes T-Shirt Sunshine</h2>
+            <p class="reviews">
+              <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
+            </p>
+            <p class="price">$104.95</p>
+          </article>
+          <article class="product-card hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
             <div class="badge secondary">save 15%</div>
             <img
