--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
         <div class="section-body">
           <article class="product-card right-gap">
             <div class="badge primary">BEST SELLER</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
@@ -49,10 +57,18 @@
           </article>
           <article class="product-card right-gap">
             <div class="badge primary">BEST SELLER</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
@@ -62,10 +78,18 @@
           <article class="product-card">
             <div class="badge primary">BEST SELLER</div>
             <div class="badge secondary">save 15%</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
@@ -77,10 +101,18 @@
           </div>
           <article class="product-card right-gap hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
@@ -90,10 +122,18 @@
           <article class="product-card hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
             <div class="badge secondary">save 15%</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
@@ -102,10 +142,18 @@
           </article>
           <article class="product-card right-gap hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
@@ -115,10 +163,18 @@
           <article class="product-card hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
             <div class="badge secondary">save 15%</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
@@ -127,10 +183,18 @@
           </article>
           <article class="product-card right-gap hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
@@ -140,10 +204,18 @@
           <article class="product-card hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
             <div class="badge secondary">save 15%</div>
-            <img
-              src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="City at night"
-            />
+            <div class="image-container">
+              <img
+                class="primary-image"
+                src="https://images.unsplash.com/photo-1691096675075-de995918f3ce?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="City at night"
+              />
+              <img
+                class="secondary-image"
+                src="https://images.unsplash.com/photo-1631730486784-5456119f69ae?q=80&w=3475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Secondary image"
+              />
+            </div>
             <h2>Outside Vibes T-Shirt Sunshine</h2>
             <p class="reviews">
               <span>★★★★☆</span> <span class="review-count">1,234 Reviews</span>
