Click event listerner added on red more CTA.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <p class="price">$104.95</p>
           </article>
           <div class="cta-container">
-            <button class="show-more-cta">Show More</button>
+            <button id="show-more" class="show-more-cta">Show More</button>
           </div>
           <article class="product-card right-gap hidden-on-mobile">
             <div class="badge primary">BEST SELLER</div>
