--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Sellers</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link href="dist/output.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
